Prevent image from stretching in mobile

--- a/packages/dapp/components/Mint/Mint.module.scss
+++ b/packages/dapp/components/Mint/Mint.module.scss
@@ -72,4 +72,5 @@
   height: 100%;
   border-top-right-radius: 24px;
   border-top-left-radius: 24px;
+  object-fit: cover;
 }
